--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,25 @@ ENV/
 env.bak/
 venv.bak/
 
+# Environment Variables (SENSITIVE!)
+.env
+.env.local
+.env.production
+.env.staging
+config.py
+
 # Project specific
 node_modules.zip
 debug_face_detection.py
 google_config.py
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Secrets and API Keys
+secrets.json
+credentials.json
+*.pem
+*.key
